packages/android_auto_linux/lib/src/bindings/aa_core_bindings.dart

// ignore_for_file: always_specify_types, camel_case_types, non_constant_identifier_names
// ignore_for_file: unused_element, unused_field, public_member_api_docs
// coverage:ignore-file

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings to the native Android Auto head unit core.
///
/// Generated from linux/src/aa_core.h by package:ffigen. Do not edit by hand.
///
class AaCoreBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  AaCoreBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  AaCoreBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Frees a string handed out through AaEventCallback. Safe to call with NULL.
  void aa_string_free(ffi.Pointer<ffi.Char> message) {
    return _aa_string_free(message);
  }

  late final _aa_string_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'aa_string_free',
      );
  late final _aa_string_free = _aa_string_freePtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Creates a session. Does not touch any hardware and does not start any threads yet.
  /// `on_event` may be NULL, though then nothing will ever be reported.
  ffi.Pointer<AaSession> aa_session_create(
    ffi.Pointer<AaConfig> config,
    AaEventCallback on_event,
  ) {
    return _aa_session_create(config, on_event);
  }

  late final _aa_session_createPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<AaSession> Function(
            ffi.Pointer<AaConfig>,
            AaEventCallback,
          )
        >
      >('aa_session_create');
  late final _aa_session_create = _aa_session_createPtr
      .asFunction<
        ffi.Pointer<AaSession> Function(ffi.Pointer<AaConfig>, AaEventCallback)
      >();

  /// Stops the session if it is running and releases everything. The session pointer is
  /// invalid afterwards. Safe to call with NULL.
  void aa_session_destroy(ffi.Pointer<AaSession> session) {
    return _aa_session_destroy(session);
  }

  late final _aa_session_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<AaSession>)>>(
        'aa_session_destroy',
      );
  late final _aa_session_destroy = _aa_session_destroyPtr
      .asFunction<void Function(ffi.Pointer<AaSession>)>();

  /// Starts the io_context thread pool and begins looking for a phone. Returns 0 on
  /// success, negative on failure. Idempotent.
  int aa_session_start(ffi.Pointer<AaSession> session) {
    return _aa_session_start(session);
  }

  late final _aa_session_startPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<AaSession>)>>(
        'aa_session_start',
      );
  late final _aa_session_start = _aa_session_startPtr
      .asFunction<int Function(ffi.Pointer<AaSession>)>();

  /// Stops the session and joins its threads. Returns 0 on success. Idempotent.
  int aa_session_stop(ffi.Pointer<AaSession> session) {
    return _aa_session_stop(session);
  }

  late final _aa_session_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<AaSession>)>>(
        'aa_session_stop',
      );
  late final _aa_session_stop = _aa_session_stopPtr
      .asFunction<int Function(ffi.Pointer<AaSession>)>();

  /// The Flutter texture id carrying the projected video, or -1 while there is no video.
  /// The texture is registered lazily on the first frame.
  int aa_session_texture_id(ffi.Pointer<AaSession> session) {
    return _aa_session_texture_id(session);
  }

  late final _aa_session_texture_idPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<AaSession>)>>(
        'aa_session_texture_id',
      );
  late final _aa_session_texture_id = _aa_session_texture_idPtr
      .asFunction<int Function(ffi.Pointer<AaSession>)>();

  /// Size of the video the phone is actually sending, or 0 before the first frame.
  ///
  /// This is not necessarily the size asked for in AaConfig. The phone picks from the
  /// video configurations service discovery advertised, and it may change mid session
  /// without the texture being rebuilt, so the host app reads it rather than assuming.
  int aa_session_video_width(ffi.Pointer<AaSession> session) {
    return _aa_session_video_width(session);
  }

  late final _aa_session_video_widthPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<AaSession>)>>(
        'aa_session_video_width',
      );
  late final _aa_session_video_width = _aa_session_video_widthPtr
      .asFunction<int Function(ffi.Pointer<AaSession>)>();

  int aa_session_video_height(ffi.Pointer<AaSession> session) {
    return _aa_session_video_height(session);
  }

  late final _aa_session_video_heightPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<AaSession>)>>(
        'aa_session_video_height',
      );
  late final _aa_session_video_height = _aa_session_video_heightPtr
      .asFunction<int Function(ffi.Pointer<AaSession>)>();

  /// Which decoder is running: "VA-API", "software", or "none" before the first frame.
  /// The returned string is heap allocated and must be handed back to aa_string_free.
  ffi.Pointer<ffi.Char> aa_session_video_backend(
    ffi.Pointer<AaSession> session,
  ) {
    return _aa_session_video_backend(session);
  }

  late final _aa_session_video_backendPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<AaSession>)
        >
      >('aa_session_video_backend');
  late final _aa_session_video_backend = _aa_session_video_backendPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<AaSession>)>();

  /// Drives the texture pipeline from a generated pattern instead of a phone, so a host
  /// app can lay its overlay out before any hardware is involved. Started life as M2
  /// scaffolding and earned its keep; the real H.264 path publishes into the same ring.
  int aa_session_start_test_pattern(ffi.Pointer<AaSession> session) {
    return _aa_session_start_test_pattern(session);
  }

  late final _aa_session_start_test_patternPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<AaSession>)>>(
        'aa_session_start_test_pattern',
      );
  late final _aa_session_start_test_pattern = _aa_session_start_test_patternPtr
      .asFunction<int Function(ffi.Pointer<AaSession>)>();

  int aa_session_stop_test_pattern(ffi.Pointer<AaSession> session) {
    return _aa_session_stop_test_pattern(session);
  }

  late final _aa_session_stop_test_patternPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<AaSession>)>>(
        'aa_session_stop_test_pattern',
      );
  late final _aa_session_stop_test_pattern = _aa_session_stop_test_patternPtr
      .asFunction<int Function(ffi.Pointer<AaSession>)>();
}

final class AaSession extends ffi.Opaque {}

/// Lifecycle states, mirrored by AndroidAutoConnectionState in Dart. Keep the two in
/// step: the integers cross the FFI boundary as-is.
enum AaState {
  AA_STATE_IDLE(0),
  AA_STATE_SEARCHING(1),
  AA_STATE_HANDSHAKING(2),
  AA_STATE_CONNECTED(3),
  AA_STATE_ERROR(4);

  final int value;
  const AaState(this.value);

  static AaState fromValue(int value) => switch (value) {
    0 => AA_STATE_IDLE,
    1 => AA_STATE_SEARCHING,
    2 => AA_STATE_HANDSHAKING,
    3 => AA_STATE_CONNECTED,
    4 => AA_STATE_ERROR,
    _ => throw ArgumentError('Unknown value for AaState: $value'),
  };
}

/// How the head unit describes itself to the phone during service discovery.
final class AaConfig extends ffi.Struct {
  @ffi.Int32()
  external int width;

  @ffi.Int32()
  external int height;

  @ffi.Int32()
  external int fps;

  @ffi.Int32()
  external int dpi;

  external ffi.Pointer<ffi.Char> head_unit_name;

  external ffi.Pointer<ffi.Char> car_model;

  external ffi.Pointer<ffi.Char> car_year;

  /// Directory holding headunit.crt and headunit.key. NULL uses the bundled pair.
  external ffi.Pointer<ffi.Char> certificate_path;
}

/// Called when the session changes state or has something to report.
///
/// Invoked from whatever thread the event originated on, so the Dart side must use a
/// NativeCallable.listener rather than an isolate local callback. `message` is heap
/// allocated by the core and ownership passes to the callee, which must hand it back to
/// aa_string_free once it has been copied into Dart. It is NULL when there is nothing
/// to say.
typedef AaEventCallback =
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(ffi.Int32 state, ffi.Pointer<ffi.Char> message)
      >
    >;
